# hola

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: adios.r  advance.r  available_variables.r  close.r  features.r.in  hola-package.r  init.r  io.r  open.r  read.r  step.r  utils.r  write.r
containers/docker/: Dockerfile  run
inst/datasets/: example.h5
man/: adios.Rd  adios_advance.Rd  adios_available_variables.Rd  adios_close.Rd  adios_open.Rd  adios_read.Rd  hola-package.Rd
src/: Makevars.in  advance.cpp  available_variables.cpp  close.cpp  hola.hpp  hola_native.c  init.cpp  io.cpp  mpi_utils.h  open.cpp  read.cpp  step.cpp  step.hpp  utils.hpp  write.cpp
tests/: read.r  write.r
tools/: build_adios.sh
